<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmileEssence Lite</string>
    <string name="app_version">β1.4.6.67</string>
    <string name="app_url">http://smileessence.lacolaco.net</string>
    <string name="key_setting_textSize">text_size</string>
    <string name="key_setting_aftersubmit">after_submit</string>
    <string name="key_setting_delete_accounts">deleteAccounts</string>
    <string name="key_setting_notice_unfav">notice_unfav</string>
    <string name="key_setting_open_ime">open_ime</string>
    <string name="key_setting_confirm_dialog">confirm_dialog</string>
    <string name="key_setting_morse">morse_enabled</string>
    <string name="key_setting_namestyle">namestyle</string>
    <string name="namestyle_s_n">ScreenName / Name</string>
    <string name="namestyle_n_s">Name / ScreenName</string>
    <string name="namestyle_s">ScreenName</string>
    <string name="namestyle_n">Name</string>
    <string name="key_setting_read_retweet">show_read_retweet</string>
    <string name="thanks_to">miz_hi, yaplus</string>
    <string name="app_info">appInfo</string>
    <string name="license_notices">licenseNotice</string>
    <string name="key_setting_search_include_rt">search_include_rt</string>
    <string name="key_setting_requestCount">setting_requestCount</string>
    <string name="key_setting_theme">colorTheme</string>
</resources>